--- a/caps/cap1.tex
+++ b/caps/cap1.tex
@@ -18,7 +18,7 @@ Como no podemos probar cada una de las infinitas combinaciones posibles, necesit
 Pruebas unitarias: Primero, probamos cada pieza por separado y en aislamiento. ¿Funciona el motor por sí solo? ¿Encienden las luces? En software, esto significa probar una función o un pequeño módulo para asegurarnos de que hace correctamente su única y específica tarea.
 Pruebas de integración: Luego, empezamos a conectar las piezas. ¿El motor funciona correctamente con la transmisión? ¿El volante hace girar las ruedas? En esta fase, verificamos las interacciones entre los componentes del software, asegurando que la comunicación y el paso de datos entre ellos sea el correcto.
 Pruebas de sistema: Una vez que el coche está completamente ensamblado, lo sacamos a la carretera. Probamos el comportamiento del sistema en su conjunto, verificando que todas sus partes funcionan en armonía para cumplir con los requisitos generales, desde la aceleración hasta el funcionamiento del aire acondicionado.
-\section{Estrategias y niveles de pruebas (testing)}
+\section{Mantenimiento de software}
 La entrega del software no es el final de la historia, es más como el momento en que te entregan las llaves de tu nueva casa. Has verificado que todo está en su sitio (las pruebas), pero ahora comienza la verdadera vida del producto, el día a día. El mantenimiento del software es todo lo que ocurre a partir de ese momento, y según nos enseña el SWEBOK, esta es a menudo la fase más larga y costosa de todo el ciclo de vida.
 Lejos de ser una tarea menor, el mantenimiento es un proceso dinámico para asegurar que el software siga siendo útil y valioso a lo largo del tiempo. Es la forma en que el software se adapta, crece y sobrevive en un mundo en constante cambio.
 El SWEBOK nos ayuda a entender que "mantenimiento" no es una sola cosa, sino un conjunto de actividades diferentes. Podemos clasificarlas en cuatro categorías principales para comprender mejor su naturaleza:
